--- a/web422-a4/package.json
+++ b/web422-a4/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
     "@auth0/angular-jwt": "^5.0.2",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
